--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
   "name": "runalyze/static-maps",
   "description": "Library to create static images from various map tile providers.",
-  "version": "0.3.3",
+  "version": "0.5.0",
   "license": "MIT",
   "require": {
-    "php": ">=7.0",
+    "php": ">=8.0",
     "league/flysystem": "^1.0",
     "intervention/image": "^2.4",
     "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.5.*",
-    "friendsofphp/php-cs-fixer": "^2.12",
+    "phpunit/phpunit": "^9.0",
+    "friendsofphp/php-cs-fixer": "^3.2",
     "league/flysystem-memory": "^1.0"
   },
   "autoload": {
