--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
   - composer install --prefer-dist --no-interaction
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+  - ./vendor/bin/phpunit --coverage-clover coverage.clover
   - vendor/bin/php-cs-fixer fix -v --diff --dry-run
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
