--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
   "require": {
     "php": ">=8.0",
     "league/flysystem": "^3.12",
-    "intervention/image": "^2.4",
+    "intervention/image": "^3",
     "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
+    "phpunit/phpunit": "^11",
     "friendsofphp/php-cs-fixer": "^3.2",
-    "league/flysystem-memory": "^3"
+    "league/flysystem-memory": "^3",
+    "league/flysystem-local": "^3.25"
   },
   "autoload": {
     "psr-4": {
